优化依赖链

--- a/config.yaml
+++ b/config.yaml
@@ -116,12 +116,10 @@ params:
     sitename: q1
     siteprefix: "site:"
   bootstrap:
-    # js: //cdn.bootcss.com/bootstrap/4.6.0/js/bootstrap.min.js
-    js: //cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js
-    # css: //cdn.bootcss.com/bootstrap/4.6.0/css/bootstrap.min.css
-    css: //cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css
+    js: //unpkg.com/bootstrap@latest/dist/js/bootstrap.min.js
+    css: //unpkg.com/bootstrap@latest/dist/css/bootstrap.min.css
     popper:
-      js: //cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.0/umd/popper.min.js
+      js: //unpkg.com/@popperjs/core@latest/dist/umd/popper.min.js
   highlightjs:
     style: "vs2015" # style name
     langs:
@@ -148,30 +146,27 @@ params:
         "yaml",
       ]
     selector: "pre>code"
-    version: "10.6.0"
-    url: #
-      # js: "//cdn.bootcss.com/highlight.js/%VERSION%/highlight.min.js"
-      js: //cdnjs.cloudflare.com/ajax/libs/highlight.js/%VERSION%/highlight.min.js
-      # style: "//cdn.bootcss.com/highlight.js/%VERSION%/styles/%STYLE%.min.css"
-      style: //cdnjs.cloudflare.com/ajax/libs/highlight.js/%VERSION%/styles/%STYLE%.min.css
-      # lang: "//cdn.bootcss.com/highlight.js/%VERSION%/languages/%LANG%.min.js"
-      lang: //cdnjs.cloudflare.com/ajax/libs/highlight.js/%VERSION%/languages/%LANG%.min.js
+    version: "latest"
+    url:
+      js: //unpkg.com/@highlightjs/cdn-assets@%VERSION%/highlight.min.js
+      style: //unpkg.com/@highlightjs/cdn-assets@%VERSION%/styles/%STYLE%.min.css
+      lang: //unpkg.com/@highlightjs/cdn-assets@%VERSION%/languages/%LANG%.min.js
     options: # options of highlight.js see http://highlightjs.readthedocs.io/en/latest/api.html#configure-options
       tabReplace: "    "
       useBR: false
       #classPrefix: 'hljs-'
       languages: {} # language alias
   katex:
-    js: //cdnjs.cloudflare.com/ajax/libs/KaTeX/0.12.0/katex.min.js
-    css: //cdnjs.cloudflare.com/ajax/libs/KaTeX/0.12.0/katex.min.css
-    autorender: //cdnjs.cloudflare.com/ajax/libs/KaTeX/0.12.0/contrib/auto-render.min.js
+    js: //unpkg.com/katex@latest/dist/katex.min.js
+    css: //unpkg.com/katex@latest/dist/katex.min.css
+    autorender: //unpkg.com/katex@latest/dist/contrib/auto-render.min.js
   jquery:
-    js: //cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.min.js
-    migrate: //cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.3.2/jquery-migrate.min.js
+    js: //unpkg.com/jquery@latest/dist/jquery.slim.min.js
+    migrate: //unpkg.com/jquery-migrate@latest/dist/jquery-migrate.min.js
   chartjs:
-    js: //cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js
+    js: //unpkg.com/chart.js@latest/dist/Chart.min.js
   mermaid:
-    js: //cdnjs.cloudflare.com/ajax/libs/mermaid/8.9.1/mermaid.min.js
+    js: //unpkg.com/mermaid@latest/dist/mermaid.min.js
   # styleimport:
   #   delay: 200
   #   urls: ['https://fonts.googleapis.com/css?family=Noto+Sans+SC:400,700&subset=chinese-simplified,japanese', 'https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,500,500i&subset=latin-ext', 'https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i&subset=latin-ext']
