--- a/config.yaml
+++ b/config.yaml
@@ -105,7 +105,7 @@ ignoreFiles:
 params:
   description: "Challenge Everything"
   author: "OWenT"
-  githubuser: "owt5008137"
+  githubuser: "owent"
   sitesource: "https://github.com/owent/blog-hugo"
   favicon: /favicon.ico
   css: ["css/syntax.css"]
