--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
         chmod 600 $HOME/.ssh/id_ed25519.action
         export GIT_SSH_COMMAND="ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o IdentityFile=$HOME/.ssh/id_ed25519.action"
         if [[ -e "${GITHUB_WORKSPACE}/../public_repo" ]]; then rm -rf "${GITHUB_WORKSPACE}/../public_repo" ; fi
-        git clone --depth=1 --single-branch --branch "master" "git@github.com:owent/blog-website.git" "${GITHUB_WORKSPACE}/../public_repo"
+        git clone --depth=10 --single-branch --branch "main" "git@github.com:owent/blog-website.git" "${GITHUB_WORKSPACE}/../public_repo"
         cd "${GITHUB_WORKSPACE}/../public_repo"
         git rm -r '*'
         find "${GITHUB_WORKSPACE}/public" -maxdepth 1 | tail -n +2 | xargs -I % cp -rf % "$PWD"
@@ -59,6 +59,6 @@ jobs:
         git remote add origin "git@github.com:owent/blog-website.git"
         git add --all
         git commit --allow-empty -a -m "Automated deployment: $(date -u) ${GITHUB_SHA}"
-        git push -f origin HEAD:master
+        git push -f origin HEAD:main
         echo "${GITHUB_SHA} was successfully deployed"
 
