Try to update mermaid
Signed-off-by: WenTao Ou <admin@owent.net>

--- a/config.yaml
+++ b/config.yaml
@@ -171,7 +171,7 @@ params:
   chartjs:
     js: //unpkg.com/chart.js@latest/dist/chart.umd.js
   mermaid:
-    js: //unpkg.com/mermaid@latest/dist/mermaid.min.js
+    js: //unpkg.com/mermaid@latest/dist/mermaid.esm.min.mjs
   utteranc:
     repo: "owent/blog-website"
     issue_term: "pathname"
