--- a/config.yaml
+++ b/config.yaml
@@ -184,8 +184,7 @@ params:
     code: |
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8180054975285991" crossorigin="anonymous"></script>
   metas:
-    - <meta name="baidu-site-verification" content="Vsc27DkHq2" />
-    - <meta name="baidu-site-verification" content="Nr2nabjqKj" />
+    - <meta name="baidu-site-verification" content="codeva-4M5iohb9TW" />
 
 menu:
   main:
