--- a/config.yaml
+++ b/config.yaml
@@ -184,20 +184,19 @@ params:
   adsense:
     code: |
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8180054975285991" crossorigin="anonymous"></script>
-    amp: |
-      <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
   metas:
     - <meta name="baidu-site-verification" content="codeva-4M5iohb9TW" />
   ads:
     menu: |
-      <amp-ad
-          layout="fixed"
-          width="120"
-          height="52"
-          type="adsense"
+      <ins class="adsbygoogle ads_menu"
+          style="display:block"
           data-ad-client="ca-pub-8180054975285991"
-          data-ad-slot="4450372783">
-      </amp-ad>
+          data-ad-slot="4450372783"
+          data-ad-format="auto"
+          data-full-width-responsive="true"></ins>
+      <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     article:
       # panel_header:
       # panel_footer:
@@ -205,25 +204,29 @@ params:
       # after_title:
       # after_body:
       after_footer: |
-        <amp-ad width="100vw" height="160"
-            type="adsense"
+        <!-- article_after_footer -->
+        <ins class="adsbygoogle ads_infeed"
+            style="display:block"
             data-ad-client="ca-pub-8180054975285991"
             data-ad-slot="5599802929"
-            data-auto-format="rspv"
-            data-full-width="">
-          <div overflow=""></div>
-        </amp-ad>
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
       # before_comments:
       # after_comments:
       after_toc: |
-        <amp-ad width="100vw" height="160"
-            type="adsense"
+        <!-- after_toc -->
+        <ins class="adsbygoogle ads_toc"
+            style="display:block"
             data-ad-client="ca-pub-8180054975285991"
             data-ad-slot="1249494377"
-            data-auto-format="rspv"
-            data-full-width="">
-          <div overflow=""></div>
-        </amp-ad>
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     # archive:
     #   # panel_header:
     #   # panel_footer:
